feat(promotions): Admin can edit a registered promotion. Update on templates: new and _form

--- a/app/views/promotions/show.html.erb
+++ b/app/views/promotions/show.html.erb
@@ -6,3 +6,4 @@
 <%= @promotion.expiration_date %>
 
 <%= link_to  "Return", promotions_path %>
+<%= link_to  "Edit Promotion", edit_promotion_path(@promotion) %>
