--- a/app/views/promotions/_form.html.erb
+++ b/app/views/promotions/_form.html.erb
@@ -1,3 +1,9 @@
+<% if @promotion.errors.any? %>
+    <% @promotion.errors.full_messages.each do |msg| %>
+        <%= msg%>
+    <% end %>
+<% end %>
+
 <%= form_with(model: @promotion, local: true) do |f| %>
     <p>
         <%= f.label(:name) %>
@@ -24,7 +30,5 @@
         <%= f.text_field(:expiration_date) %>
     </p>
 
-    <%= f.submit 'Create Promotion' %>
+    <%= f.submit submit %>
 <% end %>
-
-<%= link_to  "Cancel", promotions_path %>
