--- a/app/views/promotions/new.html.erb
+++ b/app/views/promotions/new.html.erb
@@ -1,7 +1,3 @@
-<% if @promotion.errors.any? %>
-    <% @promotion.errors.full_messages.each do |msg| %>
-        <%= msg%>
-    <% end %>
-<% end %>
+<%= render partial: "form", locals: {submit: 'Create Promotion'} %>
 
-<%= render "form" %>
+<%= link_to  "Cancel", promotions_path %>
