--- a/app/views/promotions/show.html.erb
+++ b/app/views/promotions/show.html.erb
@@ -7,3 +7,4 @@
 
 <%= link_to  "Return", promotions_path %>
 <%= link_to  "Edit Promotion", edit_promotion_path(@promotion) %>
+<%= link_to  "Delete Promotion", delete_promotion_path(@promotion) %>
