--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
+    <nav>
+    <% if user_signed_in? %>
+      <%= current_user.email %>
+      <%= link_to  "Logout", destroy_user_session_path, {method: :delete} %>
+    <% else %>
+      <%= link_to  "Login", new_user_session_path %>
+    <% end %>
+    </nav>
     <%= yield %>
   </body>
 </html>
