feat(categories): Admin can manage categories: create, edit and retrieve

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,3 +2,4 @@
 Welcome to the Promotion Management System
 
 <%= link_to  "Promotions", promotions_path %>
+<%= link_to  "Categories", categories_path %>
