feat(promotion_approval): Creator can't approve his own promotion

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
       <%= link_to  "Register", new_user_registration_path %>
     <% end %>
     </nav>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
