--- a/app/views/promotions/show.html.erb
+++ b/app/views/promotions/show.html.erb
@@ -7,12 +7,20 @@
 <%= @promotion.discount_rate %>
 <%= @promotion.coupon_quantity %>
 <%= @promotion.expiration_date %>
+<%= @promotion.user.email %>
+<% if @promotion.approved %>
+Approved Promotion
+<% else %>
+Waiting to Approve
+<% end %>
 
 <%= link_to  "Return", promotions_path %>
 <%= link_to  "Edit Promotion", edit_promotion_path(@promotion) %>
 <%= link_to  "Delete Promotion", delete_promotion_path(@promotion) %>
 <%= link_to  "Generate Coupons", generate_coupons_promotion_path(@promotion) %>
-
+<% if !@promotion.approved && current_user != @promotion.user %>
+    <%= link_to  "Approve Promotion", approve_promotion_path(@promotion) %>
+<% end %>
 <hr>
 
 <% @promotion.coupons.each do |coupon| %>
