--- a/app/views/promotions/show.html.erb
+++ b/app/views/promotions/show.html.erb
@@ -17,9 +17,10 @@ Waiting to Approve
 <%= link_to  "Return", promotions_path %>
 <%= link_to  "Edit Promotion", edit_promotion_path(@promotion) %>
 <%= link_to  "Delete Promotion", delete_promotion_path(@promotion) %>
-<%= link_to  "Generate Coupons", generate_coupons_promotion_path(@promotion) %>
 <% if !@promotion.approved && current_user != @promotion.user %>
     <%= link_to  "Approve Promotion", approve_promotion_path(@promotion) %>
+<% else %>
+    <%= link_to  "Generate Coupons", generate_coupons_promotion_path(@promotion) %>
 <% end %>
 <hr>
 
