feat(search): Admin can search by promotions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,13 @@
       <%= link_to  "Register", new_user_registration_path %>
     <% end %>
     </nav>
+    <div class="search">
+      <%= form_with url: search_path, method: :get do %>
+        <%= label_tag :q, 'Search Promotions' %>
+        <%= text_field_tag :q %>
+        <%= submit_tag 'Search' %>
+      <% end %>
+    </div>
     <div class="container">
       <%= yield %>
     </div>
